added button style

--- a/style.css
+++ b/style.css
@@ -8,3 +8,7 @@
     background-color:white!important; /* Green */
     color: black!important;
   }
+#delete:hover {
+    background-color:white!important; /* Green */
+    color: black!important;
+  }
